Change project structure.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "xdef"]
 	path = xdef
 	url = git@github.com:Syntea/xdef.git
+[submodule "ikvm"]
+	path = ikvm
+	url = git@github.com:ikvm-revived/ikvm.git
