--- a/xdef.bridge/xdef.bridge/pom.xml
+++ b/xdef.bridge/xdef.bridge/pom.xml
@@ -6,6 +6,34 @@
     <version>0.1</version>
     <packaging>jar</packaging>
     <dependencies>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.11.0</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.11.0</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>com.liferay</groupId>
+            <artifactId>com.fasterxml.jackson.databind</artifactId>
+            <version>2.10.3.LIFERAY-PATCHED-1</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13</version>
+        </dependency>
+
         <dependency>
             <groupId>org.xdef</groupId>
             <artifactId>xdef</artifactId>
