--- a/xdef.bridge/xdef.bridge/pom.xml
+++ b/xdef.bridge/xdef.bridge/pom.xml
@@ -8,6 +8,13 @@
     <dependencies>
 
         <dependency>
+            <groupId>net.sf.saxon</groupId>
+            <artifactId>saxon</artifactId>
+            <version>8.7</version>
+        </dependency>
+
+
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
             <version>2.11.0</version>
