--- a/xdef.net/xdef.net.test/xdef.net.test.csproj
+++ b/xdef.net/xdef.net.test/xdef.net.test.csproj
@@ -11,6 +11,17 @@
     <PackageReference Include="MSTest.TestAdapter" Version="2.1.0" />
     <PackageReference Include="MSTest.TestFramework" Version="2.1.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\xdef.net\xdef.net.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="xdefs\01.xdef">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
