--- a/xdef.net/xdef.net/xdef.net.csproj
+++ b/xdef.net/xdef.net/xdef.net.csproj
@@ -8,4 +8,10 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="JavaBin\xdef.bridge.jar">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
