Pack java file into dll & c# multithreading to improve performance.

--- a/xdef.bridge/xdef.bridge/pom.xml
+++ b/xdef.bridge/xdef.bridge/pom.xml
@@ -7,21 +7,14 @@
     <packaging>jar</packaging>
     <dependencies>
 
-        <dependency>
-            <groupId>net.sf.saxon</groupId>
-            <artifactId>saxon</artifactId>
-            <version>8.7</version>
-        </dependency>
-
 
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.13</version>
         </dependency>
-
         <dependency>
-            <groupId>org.xdef</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>xdef</artifactId>
             <version>40.0.0</version>
         </dependency>
