Update some objects.

--- a/xdef.net/xdef.net/xdef.net.csproj
+++ b/xdef.net/xdef.net/xdef.net.csproj
@@ -16,6 +16,10 @@
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>D:\Source\xdef.net\xdef.net\xdef.net\xdef.net.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <None Remove="Resources\xdef.bridge.jar" />
   </ItemGroup>
